# fluent-uri-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
bench/: Cargo.toml  result.txt
bench/benches/: bench.rs
benches/: bench.rs
examples/: builder.rs  parse_from_stdin.rs  parser.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: against_iref.rs  against_iri_string.rs  against_oxiri.rs  against_uriparse.rs  against_uriparser.rs  build_parse.rs  checked_resolve.rs  dec.rs  enc_dec.rs  iri_against_iref.rs  iri_against_iri_string.rs  iri_against_oxiri.rs  normalize.rs  normalize_against_iri_string.rs  normalize_iri_against_iri_string.rs  parse.rs  parse_v4.rs  parse_v6.rs  resolve.rs  resolve_against_iri_string.rs  resolve_path_underflow_disallowed.rs  to_uri_ref.rs
fuzz/src/: lib.rs
fuzz/uriparser-sys/: Cargo.toml  build.rs
fuzz/uriparser-sys/src/: lib.rs
src/: common.rs  component.rs  convert.rs  error.rs  fmt.rs  imp.rs  internal.rs  ip.rs  iri.rs  lib.rs  normalize.rs  normalizer.rs  parse.rs  parser.rs  resolve.rs  resolver.rs  ri.rs  ri_maybe_ref.rs  uri.rs  utf8.rs  view.rs
src/builder/: internal.rs  mod.rs  state.rs
src/enc/: encoder.rs  estring.rs  imp.rs  mod.rs  table.rs
src/enc/unstable/: estring.rs  imp.rs
src/encoding/: encoder.rs  estring.rs  imp.rs  macros.rs  mod.rs  raw.rs  table.rs  utf8.rs
src/encoding/unstable/: estring.rs  imp.rs  mod.rs
src/parse/: ssse3.rs
src/pct_enc/: encoder.rs  estring.rs  imp.rs  mod.rs  table.rs
src/uri/: fmt.rs  mod.rs  mutable.rs  parser.rs  parsing.rs  path.rs  tests.rs  view.rs
src/uri/parsing/: ip.rs  mod.rs
tests/: checked_normalize.rs  checked_resolve.rs  convert.rs  encoding.rs  normalize.rs  parse.rs  parse_ip.rs  resolve.rs  to_path_buf.rs  to_socket_addrs.rs
