[package]
name = "fluent-uri"
version = "0.2.0-alpha.7"
authors = ["Scallop Ye <yescallop@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "A full-featured URI handling library compliant with RFC 3986."
documentation = "https://docs.rs/fluent-uri"
repository = "https://github.com/yescallop/fluent-uri-rs"
license = "MIT"
keywords = ["builder", "parser", "uri", "rfc3986"]
categories = ["encoding", "parser-implementations"]

[features]
default = ["net", "std"]
net = []
std = []

[dependencies]
borrow-or-share = "0.2"
ref-cast = "1.0"
serde = { version = "1.0", optional = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(fluent_uri_unstable, fuzzing)',
] }
